--- a/environment.yaml
+++ b/environment.yaml
@@ -1,25 +1,25 @@
 name: autotrader
 channels:
   - conda-forge
-  - defaults
 dependencies:
-  - python=3.11
-  - pip
-  - ipykernel
-  - fredapi
-  - requests
-  - pandas
-  - numpy
-  - scikit-learn
-  - scipy
-  - statsmodels
-  - pymc
-  - matplotlib
-  - seaborn
-  - flask
-  - jupyter
-  - pytest
-  - tqdm
-  - black
+  - python=3.11  # The Python interpreter, version 3.11 for modern features and performance
+  - pip=25.0  # Package manager for installing Python packages from PyPI
+  - ipykernel=6.15.2  # Kernel for running Python code in Jupyter notebooks
+  - requests=2.32.3  # HTTP library for making web requests (e.g., fetching API data)
+  - pandas=2.2.3  # Data manipulation and analysis library (great for time series, tables)
+  - numpy=1.26.4  # Numerical computing library (arrays, math operations)
+  - scikit-learn=1.3.0  # Machine learning library (regression, classification, clustering)
+  - scipy=1.15.1  # Scientific computing (stats, optimization, signal processing)
+  - statsmodels=0.14.0  # Statistical modeling (e.g., time series analysis, econometrics)
+  - pymc=5.6.1  # Probabilistic programming for Bayesian modeling and inference
+  - matplotlib=3.10.0  # Plotting library for creating visualizations (charts, graphs)
+  - seaborn=0.13.2  # Statistical data visualization (built on matplotlib, prettier defaults)
+  - flask=3.0.2  # Lightweight web framework for building web apps or APIs
+  - jupyter=1.0.0  # Interactive notebook environment for coding, visualizing, and documenting
+  - pytest=8.1.1  # Testing framework for writing and running unit tests
+  - tqdm=4.67.1  # Progress bar utility for tracking loops or tasks
+  - black=22.6.0  # Code formatter for consistent Python style
   - pip:
-    - alpaca_trade_api  
+      - alpaca_trade_api==3.2.0  # API client for Alpaca trading platform (stock/crypto trading)
+      - fredapi==0.5.2  # API client for Federal Reserve Economic Data (FRED) economic datasets
+      - markdown==3.7  # Converts Markdown text to HTML for documentation or display
