--- a/environment.yaml
+++ b/environment.yaml
@@ -11,6 +11,7 @@ dependencies:
   - scikit-learn=1.3.0  # Machine learning library (regression, classification, clustering)
   - scipy=1.15.1  # Scientific computing (stats, optimization, signal processing)
   - statsmodels=0.14.0  # Statistical modeling (e.g., time series analysis, econometrics)
+  - ruptures=1.1.9 # Change point detection library (detecting level shifts in time series data)   
   - pymc=5.6.1  # Probabilistic programming for Bayesian modeling and inference
   - matplotlib=3.10.0  # Plotting library for creating visualizations (charts, graphs)
   - seaborn=0.13.2  # Statistical data visualization (built on matplotlib, prettier defaults)
